--- a/MovieR.Application/MovieR.Application.csproj
+++ b/MovieR.Application/MovieR.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\MovieR.Domain\MovieR.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    </ItemGroup>
+
 </Project>
